[package]
name = "juno-starknet-rs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.184"
serde_json = "1.0.81"
blockifier = "0.5.0-rc.3"
starknet_api = "0.8.0"
cairo-vm = "0.9.2"
indexmap = "2.1.0"
cached = "0.44.0" # Updated to match workspace version
once_cell = "1.19.0" # Updated to match workspace version
lazy_static = "1.4.0" # Not listed in workspace, kept as is

cairo-lang-casm = "2.6.0-rc.1"
cairo-lang-runner = "2.6.0-rc.1"
cairo-lang-starknet = "2.6.0-rc.1" # Note: cairo-lang-starknet-classes in workspace, verify if this is correct
cairo-lang-utils = "2.6.0-rc.1"

[lib]
crate-type = ["staticlib"]